# scc

./: .conftool.json  .gitignore  .gitlab-ci.yml  .gitmodules  .lit.cfg.py  .mcompat.json  .pylintrc  .version  CMakeLists.txt  Dockerfile  Jenkinsfile  Makefile  pylintrc
arch/: CMakeLists.txt  Makefile
arch/any/: Makefile  hashmap_swemu.c  hashtab_swemu.c
arch/x86_64/: CMakeLists.txt  Makefile
benchmark/: Makefile
benchmark/btmap/: btmap_compat.c  btmap_compat.h  entry.cc  find.cc  find.hpp  insert.cc  insert.hpp
benchmark/btree/: btree_compat.c  btree_compat.h  entry.cc  find.cc  find.hpp  insert.cc  insert.hpp
benchmark/hashtab/: Makefile  entry.cc  find.cc  find.hpp  hashtab_compat.c  hashtab_compat.h  insert.cc  insert.hpp
benchmark/instrumentation/: rng.hpp  types.h
cmake/: config.cmake  version.cmake
docker/arch/: Dockerfile
docker/debian/: Dockerfile
docker/ubuntu24.04/: Dockerfile
docs/: Doxyfile  Makefile  build.rst  collections.rst  conf.py  configuration.rst  hashmap.rst  hashtab.rst  index.adoc  index.rst  lifetime.rst  rbtree.rst  scc_rbtree.adoc  scc_stack.adoc  scc_svec.adoc  scc_vec.adoc  stack.rst  svec.rst  tldr.rst  vec.rst
docs/btmap/: index.rst  reference.rst
docs/btree/: index.rst  order.rst  reference.rst  split.rst
docs/building/: cmake.rst  docker.rst  index.rst  make.rst
docs/configuration/: cmake.rst  conftool.rst  index.rst  options.rst
docs/design/: Makefile  index.rst  open_addressing.rst  scc_hashtab.adoc
docs/hashmap/: index.rst  lifetime.rst  reference.rst
docs/hashtab/: index.rst  lifetime.rst  reference.rst  types.rst
docs/rbmap/: index.rst  reference.rst
docs/rbtree/: index.rst  reference.rst
docs/reference/: Makefile  bloom.rst  btmap.rst  btree.rst  deque.rst  hash.rst  hashmap.rst  hashtab.rst  index.rst  rbmap.rst  rbtree.rst  ringdeque.rst  scc_hashtab.adoc  scc_rbtree.adoc  scc_stack.adoc  scc_vec.adoc  stack.rst  vec.rst
docs/ringdeque/: index.rst  reference.rst
docs/snips/: funcs.json  scc_rbtree_example.csnip  scc_rbtree_foreach.csnip  scc_rbtree_foreach_reversed.csnip  scc_stack_array.csnip  scc_stack_custom_init.csnip  scc_svec_erase.csnip  scc_svec_erase_range.csnip  scc_svec_example.csnip  scc_svec_foreach.csnip  scc_svec_foreach_by.csnip  scc_svec_foreach_reversed.csnip  scc_svec_foreach_reversed_by.csnip  scc_svec_from.csnip  scc_vec_erase.csnip  scc_vec_erase_range.csnip  scc_vec_example.csnip  scc_vec_foreach.csnip  scc_vec_foreach_by.csnip  scc_vec_foreach_reversed.csnip  scc_vec_foreach_reversed_by.csnip  scc_vec_from.csnip  scc_vec_from_emulation.csnip  scc_vec_init_int.csnip  scc_vec_init_point.csnip  scc_vec_reserve.csnip  symmap.json
docs/stack/: Makefile  index.rst  reference.rst
docs/svec/: index.rst  reference.rst
docs/vec/: index.rst  (+1 more)
lib/: Makefile  algorithm.c  arch.c  arena.c  bloom.c  btmap.c  btree.c  canary.c  deque.c  hash.c  hashmap.c  hashmap_swar.c  hashmap_swemu.c  hashtab.c  hashtab_swar.c  hashtab_swemu.c  murmur32.c  murmur64.c  rbmap.c  rbtree.c  ringdeque.c  svec.c  swar.c  swvec.c  swvec.h  vec.c
mach/: Makefile
scc/: Makefile  algorithm.h  arch.h  arena.h  bloom.h  btmap.h  btree.h  bug.h  canary.h  deque.h  hash.h  hashmap.h  hashtab.h  mem.h  murmur32.h  murmur64.h  panic.h  perf.h  pp_token.h  rbmap.h  rbtree.h  ringdeque.h  scc_algorithm.h  scc_arena.h  scc_assert.h  scc_bits.h  scc_btmap.h  scc_btree.h  scc_dbg.h  scc_hashmap.h  scc_hashtab.h  scc_macro.h  scc_mem.h  scc_panic.h  scc_pp_token.h  scc_rbmap.h  scc_rbtree.h  scc_ringdeque.h  scc_stack.h  scc_svec.h  (+6 more)
scripts/: docs.mk  unit.mk
src/: Makefile  algorithm.c  arena.c  btmap.c  btree.c  canary.c  hashmap.c  hashtab.c  rbmap.c  rbtree.c  ringdeque.c  scc_algorithm.c  scc_arena.c  scc_btmap.c  scc_btree.c  scc_hashmap.c  scc_hashtab.c  scc_rbmap.c  scc_rbtree.c  scc_ringdeque.c  scc_svec.c  scc_vec.c  svec.c  vec.c
submodules/: Makefile
test/: Makefile
(+374 files in other folders)
